--- a/assets/styles/frontend/common/components/in/tab.less
+++ b/assets/styles/frontend/common/components/in/tab.less
@@ -10,7 +10,7 @@
 
 .in-tab {
     @media @query-xl {
-        width: @box-detail-content-width;
+        width: @box-detail-left-width;
     }
 
     &--full-width {
