--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -107,6 +107,7 @@
 @import "components/list/products-set.less";
 @import "components/list/reasons-to-buy.less";
 @import "components/list/simple.less";
+@import "components/list/set.less";
 @import "components/list/socials.less";
 @import "components/list/stores.less";
 @import "components/list/tags.less";
@@ -163,6 +164,7 @@
 @import "components/box/promo-image.less";
 @import "components/box/reasons-to-buy.less";
 @import "components/box/scroll.less";
+@import "components/box/set.less";
 @import "components/box/search.less";
 @import "components/box/slider.less";
 @import "components/box/special-offer.less";
