--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -7,6 +7,10 @@
     color: @color-green;
     font-size: @font-size-small;
 
+    &--without-gap {
+        margin-bottom: 0;
+    }
+
     &--big {
         display: flex;
         flex-wrap: wrap;
