--- a/templates/Front/Inline/Product/productFlagsMacro.html.twig
+++ b/templates/Front/Inline/Product/productFlagsMacro.html.twig
@@ -1,5 +1,5 @@
 {% macro list(productFlags, classAddition, onlyFirst, sellingPrice, variantsCount) %}
-    {% if productFlags|length > 0 or (sellingPrice is not null and sellingPrice.hasHigherStandardPrice) %}
+    {% if productFlags|length > 0 or (sellingPrice is not null and sellingPrice.hasHigherStandardPrice) or variantsCount > 0 %}
         <div class="in-flag dont-print {{ classAddition }}">
             {% if not onlyFirst %}
                 {% if sellingPrice.hasHigherStandardPrice %}
