[TF-69] Pohoda transfer - Export Customers - delivery address marked as default

--- a/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
@@ -80,6 +80,7 @@
 									<![CDATA[{{ pohodaCustomer.shipToAddress.country }}]]>
 								</typ:ids>
 							</typ:country>
+							<typ:defaultShipAddress>true</typ:defaultShipAddress>
 						</typ:shipToAddress>
 					{% endif %}
 
