saleStockQuantityMacro now takes products unit into account to render the proper message

--- a/templates/Front/Content/Product/productAvailabilityMacro.html.twig
+++ b/templates/Front/Content/Product/productAvailabilityMacro.html.twig
@@ -2,7 +2,7 @@
 {% import 'Front/Content/Product/saleStockQuantityMacro.html.twig' as saleStockQuantity %}
     {% if product.isInAnySaleStock() %}
         <span class="in-availability__date">
-            {{ saleStockQuantity.showInfo(product.getRealSaleStocksQuantity()) }}
+            {{ saleStockQuantity.showInfo(product.getRealSaleStocksQuantity(), product.unit.name) }}
         </span>
     {% elseif product.isAvailableInDays %}
         <span class="in-availability__date in-availability__date--available-in-days">
