--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -155,7 +155,7 @@
                                             {% if productView.action.isMainVariant %}
                                                 {{ 'Dostupnost dle varianty'|trans }}
                                             {% elseif productView.realSaleStocksQuantity > 0 %}
-                                                {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity) }}
+                                                {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity, productView.unitName) }}
                                             {% elseif productView.isAvailableInDays %}
                                                 <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
                                             {% else %}
@@ -250,7 +250,7 @@
                                                 {% if productView.action.isMainVariant %}
                                                     {{ 'Dostupnost dle varianty'|trans }}
                                                 {% elseif productView.realSaleStocksQuantity > 0 %}
-                                                    {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity) }}
+                                                    {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity, productView.unitName) }}
                                                 {% elseif productView.deliveryDays is not null %}
                                                     <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
                                                 {% else %}
@@ -321,7 +321,7 @@
                                         {% if productView.action.isMainVariant %}
                                             {{ 'Dostupnost dle varianty'|trans }}
                                         {% elseif productView.realSaleStocksQuantity > 0 %}
-                                            {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity) }}
+                                            {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity, productView.unitName) }}
                                         {% elseif productView.deliveryDays is not null %}
                                             <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
                                         {% else %}
