--- a/templates/Front/Content/Product/saleStockQuantityMacro.html.twig
+++ b/templates/Front/Content/Product/saleStockQuantityMacro.html.twig
@@ -1,7 +1,7 @@
-{% macro showInfo(saleStockQuantity) %}
+{% macro showInfo(saleStockQuantity, unitName) %}
     {% if saleStockQuantity > 0 and saleStockQuantity <= 10 %}
-        {{ 'Za tuto cenu skladem již jen %quantity% ks'|trans({'%quantity%': saleStockQuantity}) }}
+        {{ 'Za tuto cenu skladem již jen %quantity% %unitName%'|trans({'%quantity%': saleStockQuantity, '%unitName%': unitName}) }}
     {% elseif saleStockQuantity > 10 %}
-        {{ 'Za tuto cenu skladem > 10 ks'|trans }}
+        {{ 'Za tuto cenu skladem > 10 %unitName%'|trans({'%unitName%': unitName}) }}
     {% endif %}
 {% endmacro %}
