--- a/assets/styles/frontend/common/components/list/params.less
+++ b/assets/styles/frontend/common/components/list/params.less
@@ -34,6 +34,8 @@
             &__value {
                 width: calc(~"@{calc-base} - @{list-params-item-name-width}");
                 text-align: right;
+                
+                word-break: break-all;
             }
         }
     }
