--- a/assets/styles/frontend/common/components/box/breadcrumb.less
+++ b/assets/styles/frontend/common/components/box/breadcrumb.less
@@ -1,7 +1,9 @@
 @box-breadcrumb-padding-horizontal: 18px;
 @box-breadcrumb-padding-vertical: 15px;
+@box-breadcrumb-padding-vertical-small: 5px;
 @box-breadcrumb-font-size: @font-size-small;
 @box-breadcrumb-top-move: -7px;
+@box-breadcrumb-top-move-small: -2px;
 @box-breadcrumb-bottom-gap: 25px;
 
 .box-breadcrumb {
@@ -22,12 +24,16 @@
     }
 
     &__item {
-        margin-bottom: @box-breadcrumb-padding-vertical;
+        margin-bottom: @box-breadcrumb-padding-vertical-small;
         margin-right: @box-breadcrumb-padding-horizontal;
 
         color: @color-primary;
         font-size: @box-breadcrumb-font-size;
         text-decoration: underline;
+
+        @media @query-lg {
+            margin-bottom: @box-breadcrumb-padding-vertical;
+        }
 
         &--current {
             color: @color-base;
@@ -37,13 +43,12 @@
         &--separator {
             position: relative;
             margin: 0 @box-breadcrumb-padding-horizontal 0 0;
-            top: @box-breadcrumb-top-move;
+            top: @box-breadcrumb-top-move-small;
 
             text-decoration: none;
 
-            .box-detail & {
-                margin: 0 @box-breadcrumb-padding-horizontal @box-breadcrumb-padding-vertical 0;
-                top: -3px;
+            @media @query-lg {
+                top: @box-breadcrumb-top-move;
             }
 
             .svg {
