--- a/assets/styles/frontend/common/components/box/detail-add.less
+++ b/assets/styles/frontend/common/components/box/detail-add.less
@@ -49,7 +49,6 @@
             margin-bottom: 10px;
 
             color: @color-price;
-            white-space: nowrap;
             font-weight: 400;
             font-size: @font-size-big;
 
@@ -84,7 +83,7 @@
                 border-radius: @radius-very-small;
             }
 
-            &--registered {
+            &--info {
                 width: 100%;
                 line-height: 18px;
                 margin-bottom: 0;
@@ -107,6 +106,10 @@
 
         @media @query-vl {
             margin-bottom: @box-detial-add-item-gap + 10px;
+        }
+
+        &__message {
+            width: 100%;
         }
 
         &__spinbox {
