--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -1,9 +1,9 @@
 {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <div class="box-detail-add__action">
-        <div class="box-detail-add__action__spinbox js-spinbox-parent{% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
-            <div class="in-message in-message--warning js-maximum-amount-warning display-none">
-                {{ 'Větší množství není možné nakoupit'|trans }}
-            </div>
+    <div class="box-detail-add__action js-spinbox-parent">
+        <div class="box-detail-add__action__message in-message in-message--warning js-maximum-amount-warning display-none">
+            {{ 'Větší množství není možné nakoupit'|trans }}
+        </div>
+        <div class="box-detail-add__action__spinbox {% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
             <span class="form-input-spinbox form-input-spinbox--secondary js-spinbox">
                 {{ form_widget(form.quantity, { attr: {
                     class: 'form-input-spinbox__input input-no-style js-spinbox-input',
