CartFacade::addProductItemsToCart() now directly corrects items quantities to the valid values
- flash messages about the corrected quantities are displayed in the "afterAddWindow"
- thaks to that, a customer knows about the corrected quantities immediatelly in the popup window after the product is added to cart

--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -34,6 +34,7 @@
                 </div>
             </div>
         {% endfor %}
+        {{ render(controller('App\\Controller\\Front\\FlashMessageController:indexAction')) }}
     </div>
     <div class="box-popup-add__action">
         <div class="box-popup-add__action__buttons">
