[TF-225] Change translations of transfer issue page - now it is also for info log

--- a/templates/Admin/Content/Transfer/Issue/listGrid.html.twig
+++ b/templates/Admin/Content/Transfer/Issue/listGrid.html.twig
@@ -1,11 +1,11 @@
 {% extends '@ShopsysFramework/Admin/Grid/Grid.html.twig' %}
 
 {% block grid_no_data %}
-    {{ 'Nenalezeny žádné problémy.'|trans }}
+    {{ 'Nenalezeny žádné hlášky.'|trans }}
 {% endblock %}
 
 {% block grid_pager_totalcount %}
-    {% set entityName = 'problémů'|trans %}
+    {% set entityName = 'hlášek'|trans %}
     {{ parent() }}
 {% endblock %}
 
