--- a/templates/Admin/Content/Transfer/Issue/list.html.twig
+++ b/templates/Admin/Content/Transfer/Issue/list.html.twig
@@ -1,7 +1,7 @@
 {% extends '@ShopsysFramework/Admin/Layout/layoutWithPanel.html.twig' %}
 
-{% block title %}- {{ 'Přehled problémů v přenosech'|trans }}{% endblock %}
-{% block h1 %}{{ 'Přehled problémů v přenosech'|trans }}{% endblock %}
+{% block title %}- {{ 'Přehled logů přenosů'|trans }}{% endblock %}
+{% block h1 %}{{ 'Přehled logů přenosů'|trans }}{% endblock %}
 
 {% block btn %}
     <a href="{{ url('admin_default_dashboard') }}" class="btn wrap-bar__btn">
